add filtering by size and state

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -1,28 +1,38 @@
 <div id="filter-type" class="dropdown">
   <button class="dropdown-toggle">
     PROJECT TYPE
-    <span class="arrow">▼</span>
+    <img class="arrow" />
   </button>
   <div class="dropdown-menu">
     <label class="dropdown-item">
       <input type="checkbox" value="Enterprise" />
-      <span class="badge enterprise">ENTERPRISE</span>
+      <span class="empty-checkbox"></span>
+      <img class="check-icon" />
+      <span class="badge enterprise">Enterprise</span>
     </label>
     <label class="dropdown-item">
       <input type="checkbox" value="Quantum Computing" />
-      <span class="badge quantum">QUANTUM CAMPUS</span>
+      <span class="empty-checkbox"></span>
+      <img class="check-icon" />
+      <span class="badge quantum">Quantum Campus</span>
     </label>
     <label class="dropdown-item">
       <input type="checkbox" value="AI" />
+      <span class="empty-checkbox"></span>
+      <img class="check-icon" />
       <span class="badge ai">AI</span>
     </label>
     <label class="dropdown-item">
       <input type="checkbox" value="Colocation" />
-      <span class="badge colocation">COLOCATION</span>
+      <span class="empty-checkbox"></span>
+      <img class="check-icon" />
+      <span class="badge colocation">Colocation</span>
     </label>
     <label class="dropdown-item">
       <input type="checkbox" value="Hyperscale" />
-      <span class="badge hyperscale">HYPERSCALE</span>
+      <span class="empty-checkbox"></span>
+      <img class="check-icon" />
+      <span class="badge hyperscale">Hyperscale</span>
     </label>
   </div>
 </div>
