use custom icons for unclustered points. update images

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -11,7 +11,7 @@
       <span class="badge enterprise">Enterprise</span>
     </label>
     <label class="dropdown-item">
-      <input type="checkbox" value="Quantum Computing" />
+      <input type="checkbox" value="Quantum Campus" />
       <span class="empty-checkbox"></span>
       <img class="check-icon" />
       <span class="badge quantum">Quantum Campus</span>
