update classnames to increase specificity

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -1,38 +1,38 @@
-<div id="filter-type" class="dropdown">
-  <button class="dropdown-toggle">
+<div id="os-map-filter-type" class="os-map-dropdown">
+  <button class="os-map-dropdown-toggle">
     PROJECT TYPE
-    <img class="arrow" />
+    <img class="os-map-arrow" />
   </button>
-  <div class="dropdown-menu">
-    <label class="dropdown-item">
+  <div class="os-map-dropdown-menu">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="Enterprise" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
-      <span class="badge enterprise">Enterprise</span>
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
+      <span class="os-map-badge os-map-enterprise">Enterprise</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="Quantum Campus" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
-      <span class="badge quantum">Quantum Campus</span>
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
+      <span class="os-map-badge os-map-quantum">Quantum Campus</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="AI" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
-      <span class="badge ai">AI</span>
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
+      <span class="os-map-badge os-map-ai">AI</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="Colocation" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
-      <span class="badge colocation">Colocation</span>
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
+      <span class="os-map-badge os-map-colocation">Colocation</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="Hyperscale" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
-      <span class="badge hyperscale">Hyperscale</span>
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
+      <span class="os-map-badge os-map-hyperscale">Hyperscale</span>
     </label>
   </div>
 </div>
