--- a/src/dropdowns/filter-size.html
+++ b/src/dropdowns/filter-size.html
@@ -1,55 +1,55 @@
-<div id="filter-size" class="dropdown">
-  <button class="dropdown-toggle">
+<div id="os-map-filter-size" class="os-map-dropdown">
+  <button class="os-map-dropdown-toggle">
     SIZE
-    <img class="arrow" />
+    <img class="os-map-arrow" />
   </button>
-  <div class="dropdown-menu">
-    <label class="dropdown-item">
+  <div class="os-map-dropdown-menu">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="1+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>1+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="20+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>20+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="30+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>30+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="40+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>40+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="60+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>60+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="70+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>70+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="80+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>80+ MW</span>
     </label>
-    <label class="dropdown-item">
+    <label class="os-map-dropdown-item">
       <input type="checkbox" value="90+ MW" />
-      <span class="empty-checkbox"></span>
-      <img class="check-icon" />
+      <span class="os-map-empty-checkbox"></span>
+      <img class="os-map-check-icon" />
       <span>90+ MW</span>
     </label>
   </div>
