update image links. set badge classnames

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -8,31 +8,31 @@
       <input type="checkbox" value="Enterprise" />
       <span class="os-map-empty-checkbox"></span>
       <img class="os-map-check-icon" />
-      <span class="os-map-badge os-map-enterprise">Enterprise</span>
+      <span class="os-map-badge enterprise">Enterprise</span>
     </label>
     <label class="os-map-dropdown-item">
-      <input type="checkbox" value="Quantum Campus" />
+      <input type="checkbox" value="Quantum Computing" />
       <span class="os-map-empty-checkbox"></span>
       <img class="os-map-check-icon" />
-      <span class="os-map-badge os-map-quantum">Quantum Campus</span>
+      <span class="os-map-badge quantum">Quantum Computing</span>
     </label>
     <label class="os-map-dropdown-item">
       <input type="checkbox" value="AI" />
       <span class="os-map-empty-checkbox"></span>
       <img class="os-map-check-icon" />
-      <span class="os-map-badge os-map-ai">AI</span>
+      <span class="os-map-badge ai">AI</span>
     </label>
     <label class="os-map-dropdown-item">
       <input type="checkbox" value="Colocation" />
       <span class="os-map-empty-checkbox"></span>
       <img class="os-map-check-icon" />
-      <span class="os-map-badge os-map-colocation">Colocation</span>
+      <span class="os-map-badge colocation">Colocation</span>
     </label>
     <label class="os-map-dropdown-item">
       <input type="checkbox" value="Hyperscale" />
       <span class="os-map-empty-checkbox"></span>
       <img class="os-map-check-icon" />
-      <span class="os-map-badge os-map-hyperscale">Hyperscale</span>
+      <span class="os-map-badge hyperscale">Hyperscale</span>
     </label>
   </div>
 </div>
