Compute Map - Quantum Compute Locations broken (#1)
* build filter dropdowns according to data

* revert version to 0.0.2

* trim state value from json

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -1,38 +1,7 @@
 <div id="os-map-filter-type" class="os-map-dropdown">
   <button class="os-map-dropdown-toggle">
     PROJECT TYPE
-    <img class="os-map-arrow" />
+    <span class="os-map-arrow"></span>
   </button>
-  <div class="os-map-dropdown-menu">
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="Enterprise" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span class="os-map-badge enterprise">Enterprise</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="Quantum Computing" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span class="os-map-badge quantum">Quantum Computing</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="AI" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span class="os-map-badge ai">AI</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="Colocation" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span class="os-map-badge colocation">Colocation</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="Hyperscale" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span class="os-map-badge hyperscale">Hyperscale</span>
-    </label>
-  </div>
+  <div class="os-map-dropdown-menu"></div>
 </div>
