--- a/src/dropdowns/filter-size.html
+++ b/src/dropdowns/filter-size.html
@@ -1,56 +1,7 @@
 <div id="os-map-filter-size" class="os-map-dropdown">
   <button class="os-map-dropdown-toggle">
     SIZE
-    <img class="os-map-arrow" />
+    <span class="os-map-arrow"></span>
   </button>
-  <div class="os-map-dropdown-menu">
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="1+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>1+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="20+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>20+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="30+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>30+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="40+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>40+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="60+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>60+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="70+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>70+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="80+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>80+ MW</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="90+ MW" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>90+ MW</span>
-    </label>
-  </div>
+  <div class="os-map-dropdown-menu"></div>
 </div>
