--- a/src/dropdowns/filter-state.html
+++ b/src/dropdowns/filter-state.html
@@ -1,314 +1,7 @@
 <div id="os-map-filter-state" class="os-map-dropdown">
   <button class="os-map-dropdown-toggle">
     STATE
-    <img class="os-map-arrow" />
+    <span class="os-map-arrow"></span>
   </button>
-  <div class="os-map-dropdown-menu">
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="AL" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Alabama</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="AK" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Alaska</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="AZ" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Arizona</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="AR" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Arkansas</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="CA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>California</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="CO" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Colorado</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="CT" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Connecticut</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="DE" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Delaware</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="FL" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Florida</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="GA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Georgia</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="HI" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Hawaii</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="ID" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Idaho</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="IL" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Illinois</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="IN" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Indiana</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="IA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Iowa</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="KS" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Kansas</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="KY" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Kentucky</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="LA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Louisiana</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="ME" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Maine</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MD" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Maryland</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Massachusetts</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MI" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Michigan</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MN" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Minnesota</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MS" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Mississippi</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MO" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Missouri</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="MT" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Montana</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NE" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Nebraska</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NV" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Nevada</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NH" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>New Hampshire</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NJ" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>New Jersey</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NM" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>New Mexico</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NY" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>New York</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="NC" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>North Carolina</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="ND" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>North Dakota</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="OH" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Ohio</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="OK" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Oklahoma</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="OR" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Oregon</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="PA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Pennsylvania</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="RI" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Rhode Island</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="SC" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>South Carolina</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="SD" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>South Dakota</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="TN" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Tennessee</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="TX" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Texas</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="UT" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Utah</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="VT" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Vermont</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="VA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Virginia</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="WA" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Washington</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="WV" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>West Virginia</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="WI" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Wisconsin</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="WY" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>Wyoming</span>
-    </label>
-    <label class="os-map-dropdown-item">
-      <input type="checkbox" value="DC" />
-      <span class="os-map-empty-checkbox"></span>
-      <img class="os-map-check-icon" />
-      <span>District of Columbia</span>
-    </label>
-  </div>
+  <div class="os-map-dropdown-menu"></div>
 </div>
