HA-13828 / Compute Map - responsive maps for mobile (#7)
* fit map to its bounds

* reset each filter on button click

* mobile styles for filter dropdowns

* trying WebMercatorViewport

* Chaniging the map to be responsive

* set viewport boundaries using data-os-map-viewport attributes

* add dropdown classes to readme

* add popup transition

---------

Co-authored-by: Mike Menne <mikemenne@Mikes-MacBook-Pro.local>

--- a/src/dropdowns/filter-type.html
+++ b/src/dropdowns/filter-type.html
@@ -1,7 +1,17 @@
 <div id="os-map-filter-type" class="os-map-dropdown">
   <button class="os-map-dropdown-toggle">
-    PROJECT TYPE
+    <span class="os-map-dropdown-toggle-text">PROJECT TYPE</span>
+    <span class="os-map-filter-count"></span>
     <span class="os-map-arrow"></span>
   </button>
-  <div class="os-map-dropdown-menu"></div>
+  <div class="os-map-dropdown-menu">
+    <div class="os-map-dropdown-menu-header">
+      <span>Project type</span>
+      <button class="os-map-dropdown-close-button"></button>
+    </div>
+    <div class="os-map-dropdown-menu-list"></div>
+    <div class="os-map-dropdown-menu-footer">
+      <button class="os-map-filter-reset-button">Reset</button>
+    </div>
+  </div>
 </div>
