--- a/src/dropdowns/filter-size.html
+++ b/src/dropdowns/filter-size.html
@@ -1,7 +1,17 @@
 <div id="os-map-filter-size" class="os-map-dropdown">
   <button class="os-map-dropdown-toggle">
-    SIZE
+    <span class="os-map-dropdown-toggle-text">SIZE</span>
+    <span class="os-map-filter-count"></span>
     <span class="os-map-arrow"></span>
   </button>
-  <div class="os-map-dropdown-menu"></div>
+  <div class="os-map-dropdown-menu">
+    <div class="os-map-dropdown-menu-header">
+      <span>Project size</span>
+      <button class="os-map-dropdown-close-button"></button>
+    </div>
+    <div class="os-map-dropdown-menu-list"></div>
+    <div class="os-map-dropdown-menu-footer">
+      <button class="os-map-filter-reset-button">Reset</button>
+    </div>
+  </div>
 </div>
